--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,11 +20,33 @@ body {
   letter-spacing: 0.15rem;
 }
 
-ul,
-li {
-  list-style: none;
+/* .nav_menu::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0rem;
+  width: 100%;
+  height: 2px;
+  background-color: currentColor;
+  transition: ease 200ms transform;
+  transform: scaleX(0);
+  transform-origin: center;
+  transition-delay: 300ms;
 }
+
+.nav_menu:hover::after {
+  transform: scaleX(1);
+} */
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .section {
+    @apply min-h-screen relative z-10 px-20;
+  }
+  .nav_menu {
+    @apply cursor-pointer px-4 rounded-xl text-2xl font-medium relative;
+  }
+}
