--- a/styles/globals.css
+++ b/styles/globals.css
@@ -20,23 +20,27 @@ body {
   letter-spacing: 0.15rem;
 }
 
-/* .nav_menu::after {
+.review::after,
+.review::before {
   content: "";
   position: absolute;
-  left: 0;
-  bottom: 0rem;
-  width: 100%;
-  height: 2px;
-  background-color: currentColor;
-  transition: ease 200ms transform;
-  transform: scaleX(0);
-  transform-origin: center;
-  transition-delay: 300ms;
+  z-index: 10;
+  width: 0;
+  height: 0;
 }
 
-.nav_menu:hover::after {
-  transform: scaleX(1);
-} */
+.review::after {
+  top: 100%;
+  left: 0;
+  border-left: black solid 6rem;
+  border-bottom: transparent solid 3rem;
+}
+.review::before {
+  top: 100%;
+  right: 0;
+  border-left: transparent solid 6rem;
+  border-top: black solid 3rem;
+}
 
 @tailwind base;
 @tailwind components;
